@@ -1,4 +1,5 @@
 4.30.1:
+  - XML users note: the default attribute prefix has change to `+@` to avoid naming conflicts!
   - Can use expressions in slice #1419
   - Fixed unhandled exception when decoding CSV thanks @washanhanzi
   - Added array_to_map operator for #1415
